--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <a href="#" class="ml-11">Service</a>
               <a href="#" class="ml-11">Gallery</a>
               <a href="#" class="ml-11">Blog</a>
-              <button class="px-10 py-3 bg-red-400 ml-11 rounded-3xl text-white font-semibold">Contact</button>
+              <button class="button bg-red-400 text-white ml-11">Contact</button>
             </div>
           </div>
           <ion-icon name="menu-outline" class="ml-6 text-4xl md:hidden text-black"></ion-icon>
@@ -40,7 +40,7 @@
     <div class="mt-20 md:mt-32 px-5">
       <div class="content mx-auto">
         <div class="">
-          <span class="text-red-400 font-semibold">
+          <span class="caption text-red-400">
             About
           </span>
           <h1 class="mt-3 text-2xl md:text-4xl text-gray-500 font-semibold max-w-4xl">
@@ -62,10 +62,10 @@
     </div>
 
     <!-- Team -->
-    <div class="mt-20 md:mt-32 px-5">
+    <div class="mt-20 md:mt-32 px-7">
       <div class="content mx-auto">
         <div class="text-center">
-          <p class="text-base text-red-400 text-white font-semibold">
+          <p class="caption text-red-400 text-white">
             Professional Teams
           </p>
           <h2 class="text-2xl md:text-4xl mt-3 text-gray-500 font-semibold">
@@ -75,11 +75,11 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam.
           </p>
         </div>
-        <div class="flex flex-wrap mt-10 md:mt-24 -mx-7">
-          <div class="w-full lg:w-1/3">
-            <div class="text-center mx-7 py-10 md:py-24 px-5 md:px-24">
+        <div class="flex flex-wrap -mx-7">
+          <div class="w-full lg:w-1/3 px-7 mt-10 md:mt-24">
+            <div class="text-center hover:shadow-2xl rounded-3xl py-10 md:py-24 px-5 md:px-24 transition-all duration-500">
               <img src="team-1.png" class="mx-auto" />
-              <p class="text-base text-red-400 font-semibold mt-14">
+              <p class="caption text-red-400 mt-14">
                 Surgeon
               </p>
               <h3 class="text-gray-500 font-semibold mt-2">
@@ -101,10 +101,10 @@
               </div>
             </div>
           </div>
-          <div class="w-full lg:w-1/3">
-            <div class="text-center mx-7 shadow-2xl rounded-3xl py-10 md:py-24 px-5 md:px-24 mt-5 md:mt-0">
+          <div class="w-full lg:w-1/3 px-7 mt-10 md:mt-24">
+            <div class="text-center hover:shadow-2xl rounded-3xl py-10 md:py-24 px-5 md:px-24 transition-all duration-500">
               <img src="team-2.png" class="mx-auto" />
-              <p class="text-base text-red-400 font-semibold mt-14">
+              <p class="caption text-red-400 mt-14">
                 Dermatologist
               </p>
               <h3 class="text-gray-500 font-semibold mt-2">
@@ -126,10 +126,10 @@
               </div>
             </div>
           </div>
-          <div class="w-full lg:w-1/3">
-            <div class="text-center mx-7 py-10 md:py-24 px-5 md:px-24 mt-5 md:mt-0">
+          <div class="w-full lg:w-1/3 px-7 mt-10 md:mt-24">
+            <div class="text-center hover:shadow-2xl rounded-3xl py-10 md:py-24 px-5 md:px-24 transition-all duration-500">
               <img src="team-3.png" class="mx-auto" />
-              <p class="text-base text-red-400 font-semibold mt-14">
+              <p class="caption text-red-400 mt-14">
                 Stylist expert
               </p>
               <h3 class="text-gray-500 font-semibold mt-2">
@@ -159,7 +159,7 @@
     <div class="service mt-20 md:mt-32 px-5">
       <div class="content mx-auto">
         <div class="py-40 mx-auto text-center max-w-xl">
-          <span class="font-semibold text-gray-300">
+          <span class="caption text-gray-300">
             Business Slogan
           </span>
           <h2 class="mt-3 text-2xl md:text-4xl text-white font-semibold">
@@ -180,7 +180,7 @@
             <img src="girl.png" class="mx-auto"/>
           </div>
           <div class="w-full md:w-1/2 order-1 md:order-2 max-w-xl pl-0 lg:pl-12">
-            <span class="text-red-400 font-semibold">
+            <span class="caption text-red-400">
               Our Vision
             </span>
             <h2 class="mt-3 text-2xl md:text-4xl text-gray-500 font-semibold">
@@ -196,7 +196,7 @@
         </div>
         <div class="flex flex-wrap items-center mt-12 md:mt-32">
           <div class="w-full md:w-1/2 max-w-xl pr-0 lg:pr-40">
-            <span class="text-red-400 font-semibold">
+            <span class="caption text-red-400">
               Our Mission
             </span>
             <h2 class="mt-3 text-2xl md:text-4xl text-gray-500 font-semibold">
@@ -220,7 +220,7 @@
     <div class="mt-20 md:mt-32 px-5">
       <div class="content mx-auto">
         <div class="text-center">
-          <span class="text-red-400 font-semibold">
+          <span class="caption text-red-400">
             Our Clients
           </span>
           <h2 class="mt-3 text-2xl md:text-4xl text-gray-500 font-semibold">
@@ -250,84 +250,84 @@
       </div>
     </div>
 
-      <!-- footer -->
-      <div class="footer text-white px-5 pt-24 md:pt-48 mt-0 md:mt-32">
-        <div class="content mx-auto">
-          <div class="flex  flex-wrap">
-            <div class="w-full md:w-2/4">
-              <div class="">
-                <div class="flex items-center">
-                  <img src="logo-f.svg" />
-                  <span class="text-2xl ml-5 font-semibold">Beautice</span>
-                </div>
+    <!-- footer -->
+    <footer class="footer text-white px-5 pt-24 md:pt-48 mt-0 md:mt-32">
+      <div class="content mx-auto">
+        <div class="flex flex-wrap">
+          <div class="w-full md:w-2/4">
+            <div class="">
+              <div class="flex items-center">
+                <img src="logo-f.svg" />
+                <span class="text-2xl ml-5 font-semibold">Beautice</span>
+              </div>
 
-                  <p class="mt-8">Beautice is a Beauty Clinic WordPress Theme.</p>
-                  <p class="mt-6">Baker Steet 101, NY, United States.</p>
-                <div class="flex flex-row mt-3">
-                  <p>+521 569 8966.</p>
-                  <p class="ml-7">mail@company.com.</p>
-                </div>
-              </div>
-            </div>
-            <div class="w-1/2 md:w-1/4 mt-16 md:mt-0">
-              <h3>Pages</h3>
-              <div class="flex mt-5">
-                <img src="caret.svg" />
-                <span>Home</span>
-              </div>
-              <div class="flex mt-3">
-                <img src="caret.svg" />
-                <span>About</span>
-              </div>
-              <div class="flex mt-3">
-                <img src="caret.svg" />
-                <span>Services</span>
-              </div>
-              <div class="flex mt-3">
-                <img src="caret.svg" />
-                <span>Gallery</span>
-              </div>
-              <div class="flex mt-3">
-                <img src="caret.svg" />
-                <span>Team</span>
-              </div>
-            </div>
-            <div class="w-1/2  md:w-1/4 mt-16 md:mt-0">
-              <h3>Informations</h3>
-              <div class="flex mt-5">
-                <img src="caret.svg" />
-                <span>Terms & conditions</span>
-              </div>
-              <div class="flex mt-3">
-                <img src="caret.svg" />
-                <span>Privacy policy</span>
-              </div>
-              <div class="flex mt-3">
-                <img src="caret.svg" />
-                <span>Blog</span>
-              </div>
-              <div class="flex mt-3">
-                <img src="caret.svg" />
-                <span>Contact</span>
+                <p class="mt-8">Beautice is a Beauty Clinic WordPress Theme.</p>
+                <p class="mt-6">Baker Steet 101, NY, United States.</p>
+              <div class="flex flex-row mt-3">
+                <p>+521 569 8966.</p>
+                <p class="ml-7">mail@company.com.</p>
               </div>
             </div>
           </div>
-          <div class="flex justify-center md:justify-end my-12">
-            <img src="button.svg" />
-          </div>
-          <div class="flex flex-wrap justify-between items-center pb-20">
-            <div class="flex">
-              <img src="facebook-w.svg" />
-              <img src="twitter-w.svg" class="ml-11"/>
-              <img src="linkedin-w.svg" class="ml-11"/>
-              <img src="youtube-w.svg" class="ml-11"/>
-              <img src="instagram-w.svg" class="ml-11"/>
+          <div class="w-1/2 md:w-1/4 mt-16 md:mt-0">
+            <h3>Pages</h3>
+            <div class="flex mt-5">
+              <img src="caret.svg" />
+              <span class="ml-3">Home</span>
             </div>
-            <div class="mt-14 md:mt-0">
-              <p>© AltDesain Studio 2021 - All right reserved.</p>
+            <div class="flex mt-3">
+              <img src="caret.svg" />
+              <span class="ml-3">About</span>
+            </div>
+            <div class="flex mt-3">
+              <img src="caret.svg" />
+              <span class="ml-3">Services</span>
+            </div>
+            <div class="flex mt-3">
+              <img src="caret.svg" />
+              <span class="ml-3">Gallery</span>
+            </div>
+            <div class="flex mt-3">
+              <img src="caret.svg" />
+              <span class="ml-3">Team</span>
+            </div>
+          </div>
+          <div class="w-1/2  md:w-1/4 mt-16 md:mt-0">
+            <h3 class="font-bold">Informations</h3>
+            <div class="flex mt-5">
+              <img src="caret.svg" />
+              <span class="ml-3">Terms & conditions</span>
+            </div>
+            <div class="flex mt-3">
+              <img src="caret.svg" />
+              <span class="ml-3">Privacy policy</span>
+            </div>
+            <div class="flex mt-3">
+              <img src="caret.svg" />
+              <span class="ml-3">Blog</span>
+            </div>
+            <div class="flex mt-3">
+              <img src="caret.svg" />
+              <span class="ml-3">Contact</span>
             </div>
           </div>
         </div>
+        <div class="flex justify-center md:justify-end my-12">
+          <img src="button.svg" />
+        </div>
+        <div class="flex flex-wrap justify-between items-center pb-20">
+          <div class="flex">
+            <img src="facebook-w.svg" />
+            <img src="twitter-w.svg" class="ml-11"/>
+            <img src="linkedin-w.svg" class="ml-11"/>
+            <img src="youtube-w.svg" class="ml-11"/>
+            <img src="instagram-w.svg" class="ml-11"/>
+          </div>
+          <div class="mt-14 md:mt-0">
+            <p>© AltDesain Studio 2021 - All right reserved.</p>
+          </div>
+        </div>
       </div>
+    </footer>
   </body>
 </html>
